# Syntax-Aware-RAG

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  IMPLEMENTATION_REPORT.md  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml
docker/: Dockerfile
examples/: quickstart.py
src/syntax_aware_rag/chunking/: __init__.py  base.py  layout_aware_chunker.py  recursive_chunker.py  sentence_chunker.py  types.py
src/syntax_aware_rag/cli/: main.py
src/syntax_aware_rag/context/: __init__.py  context_builder.py
src/syntax_aware_rag/embedding/: __init__.py  hierarchical_embedder.py  types.py
src/syntax_aware_rag/index/: __init__.py  faiss_index.py
src/syntax_aware_rag/retrieve/: __init__.py  multi_granular_retriever.py
tests/unit/: test_chunking.py
